// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A default Button 1`] = `
.c0 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 1px 0 1px 0;
  padding: 5px 16px 5px 16px;
  border: 2px solid transparent;
  border-radius: 6px;
  outline: none;
  color: rgba(0,0,0,0.8);
  border: 1px solid rgba(0,0,0,0.8);
  background-color: #ffffff;
  font-family: "Inter",sans-serif;
  font-weight: 500;
  font-size: 11px;
  line-height: 16px;
  -webkit-letter-spacing: 0.005em;
  -moz-letter-spacing: 0.005em;
  -ms-letter-spacing: 0.005em;
  letter-spacing: 0.005em;
  opacity: 1;
}

.c0:active,
.c0:focus {
  padding: 4px 15px 4px 15px;
  border: 2px solid #18a0fb;
}

<button
  className="c0"
/>
`;

exports[`A disabped Button 1`] = `
.c0 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 1px 0 1px 0;
  padding: 5px 16px 5px 16px;
  border: 2px solid transparent;
  border-radius: 6px;
  outline: none;
  color: rgba(0,0,0,0.3);
  border: 1px solid rgba(0,0,0,0.3);
  background-color: #ffffff;
  font-family: "Inter",sans-serif;
  font-weight: 500;
  font-size: 11px;
  line-height: 16px;
  -webkit-letter-spacing: 0.005em;
  -moz-letter-spacing: 0.005em;
  -ms-letter-spacing: 0.005em;
  letter-spacing: 0.005em;
  opacity: 1;
}

.c0:active,
.c0:focus {
  padding: 4px 15px 4px 15px;
  border: 2px solid #18a0fb;
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`A primary Button 1`] = `
.c0 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 1px 0 1px 0;
  padding: 5px 16px 5px 16px;
  border: 2px solid transparent;
  border-radius: 6px;
  outline: none;
  color: #ffffff;
  background-color: #18a0fb;
  font-family: "Inter",sans-serif;
  line-height: 16px;
  font-weight: 500;
  font-size: 11px;
  line-height: 16px;
  -webkit-letter-spacing: 0.01em;
  -moz-letter-spacing: 0.01em;
  -ms-letter-spacing: 0.01em;
  letter-spacing: 0.01em;
  opacity: 1;
}

.c0:active,
.c0:focus {
  border: 2px solid rgba(0,0,0,0.3);
}

<button
  className="c0"
/>
`;
